src/PJ/POCO/TEST/NEG/NSTRUC10.POC
/* Another questionable use of struct */
#pragma poco echo "expect>malformed name for struct/union/enum..."

struct char {int foo; char bar;} fb; 

main()
{
puts("This shouldn't compile really");
}
